<resources>
    <string name="app_name">Practice Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="leaderboard">leaderboard</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="project_submission">Project Submission</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="submission_successful">Submission Successful</string>
</resources>