<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:contentPadding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <ImageView
                android:id="@+id/dialog_cancel_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_cancel_24"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


            <TextView
                android:id="@+id/dialog_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="42dp"
                android:layout_weight="4"
                android:background="@drawable/curved_edges"
                android:text="@string/are_you_sure"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/dialog_question_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_cancel_image" />

            <ImageView
                android:id="@+id/dialog_question_image"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dialog_text"
                app:layout_constraintTop_toTopOf="@+id/dialog_text"
                app:srcCompat="@drawable/question_mark" />

            <Button
                android:id="@+id/dialog_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"

                android:layout_marginBottom="42dp"
                android:background="@drawable/curved_edges"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="#f59212"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>